grammar.js
    source_file: ($) => repeat($._item),

    _item: ($) =>
      choice(
        $.use_declaration,
        $.mod_declaration,
        $.function_definition,
        $.struct_declaration,
        $.enum_declaration,
        $.ability_declaration,
        $.const_declaration,
      ),

    // mod foo
    // mod Foo
    // mod foo { ... }
    // pub mod foo
    mod_declaration: ($) =>
      seq(
        optional($.visibility_marker),
        $.keyword_mod,
        field("name", $._name),
        optional(field("body", $.mod_body)),
      ),

    mod_body: ($) => seq("{", repeat($._item), "}"),

    // use std::io
    // use std::collections::List
    // use std::math::{sin, cos, tan}
    // use foo::bar as baz
    // use a::{b::{self, c as d}, e::f as g}
    // pub use internal::api
    _outer_path_keyword: ($) => choice($.keyword_pkg, $.keyword_super),

    // struct User { name: String, age: Nat }
    // struct Box(a) { value: a }
    // pub struct Point { x: Int, y: Int }
    _field_separator: ($) => choice(",", $._newline),

    _type: ($) =>
      choice(
        $.type_path,
        $.type_variable,
        $.generic_type,
        $.function_type,
        $.tuple_type,
      ),

    // Tuple type: #(Int, String), #(a, b, c)
    type_identifier: ($) => re`[A-Z][a-zA-Z0-9_]*`,

    // enum Option(a) { None, Some(a) }
    // enum Result(a, e) { Ok { value: a }, Err { error: e } }
    // pub enum Status { Active, Inactive }
    function_definition: ($) =>
      choice($.extern_function, $.regular_function),

    // extern fn: no body allowed
    extern_function: ($) =>
      seq(
        optional($.visibility_marker),
        $.extern_marker,
        ...functionSignature($),
      ),

    // regular fn: body required
    regular_function: ($) =>
      seq(
        optional($.visibility_marker),
        ...functionSignature($),
        field("body", $.block),
      ),

    // extern or extern "abi"
    extern_marker: ($) =>
      seq($.keyword_extern, optional(field("abi", $.string))),

    // Operator name for function definitions: (+), (<>), (==)
    operator_name: ($) => seq("(", $._operator, ")"),

    // -> Type or ->{E} Type
    return_type_annotation: ($) =>
      seq("->", optional(field("abilities", $.ability_row)), $._type),

    // Parameter with optional type annotation: x or x: Int
    parameter: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq(":", field("type", $._type))),
      ),

    // Parameter list (requires at least one, can mix typed/untyped)
    parameter_list: ($) =>
      seq($.parameter, repeat(seq(",", $.parameter)), optional(",")),

    block: ($) =>
      seq("{", repeat(choice($.let_statement, $.expression_statement)), "}"),

    expression_statement: ($) => $._expression,

    _expression: ($) =>
      choice(
        $.binary_expression,
        $.lambda_expression,
        $.constructor_expression,
        $.call_expression,
        $.resume_expression,
        $.method_call_expression,
        $.case_expression,
        $.handle_expression,
        $.record_expression,
        $.primary_expression,
      ),

    // resume value — only valid inside op handler arms
    resume_expression: ($) =>
      prec.right(
        0,
        seq(
          $.keyword_resume,
          optional(field("value", $._expression)),
        ),
      ),

    binary_expression: ($) => {
      const binop = (precedence, op) =>
        prec.left(
          precedence,
          seq(
            field("left", $._expression),
            field("operator", op),
            field("right", $._expression),
          ),
        );
      return choice(
        // Precedence (higher number = binds tighter)
        // 5: * / %
        binop(5, "*"),
        binop(5, "/"),
        binop(5, "%"),
        // 4: + - <>
        binop(4, "+"),
        binop(4, "-"),
        binop(4, "<>"),
        // 3: == != < > <= >=
        binop(3, "=="),
        binop(3, "!="),
        binop(3, "<"),
        binop(3, ">"),
        binop(3, "<="),
        binop(3, ">="),
        // 2: &&
        binop(2, "&&"),
        // 1: ||
        binop(1, "||"),
        // Qualified operators: a Int::+ b, xs List::<> ys
        binop(5, $.qualified_operator),
      );
    },

    call_expression: ($) =>
      prec(
        10,
        seq(
          field("function", $.value_path),
          "(",
          optional($.argument_list),
          ")",
        ),
      ),

    constructor_expression: ($) =>
      prec(
        10,
        seq(
          field("constructor", $.type_path),
          optional(seq("(", optional($.argument_list), ")")),
        ),
      ),

    // UFCS: x.f(y) -> f(x, y), x.f -> f(x), x.a::b(y) -> a::b(x, y)
    handle_expression: ($) =>
      seq(
        $.keyword_handle,
        field("expr", $._expression),
        "{",
        optional(
          seq(
            $.handler_arm,
            repeat(seq($._field_separator, $.handler_arm)),
            optional($._field_separator),
          ),
        ),
        "}",
      ),

    // Handler arm: do x { body }, fn Op(args) { body }, op Op(args) { body }
    handler_arm: ($) =>
      choice(
        $.completion_handler,
        $.fn_handler,
        $.op_handler,
      ),

    // do result { body }
    completion_handler: ($) =>
      seq(
        $.keyword_do,
        field("binding", $.identifier),
        field("body", $.block),
      ),

    // fn Console::print(msg) { body }
    fn_handler: ($) =>
      seq(
        $.keyword_fn,
        field("operation", $.value_path),
        "(",
        optional(field("params", $.handler_parameter_list)),
        ")",
        field("body", $.block),
      ),

    // op State::get() { body }
    op_handler: ($) =>
      seq(
        $.keyword_op,
        field("operation", $.value_path),
        "(",
        optional(field("params", $.handler_parameter_list)),
        ")",
        field("body", $.block),
      ),

    // Handler parameters are just identifiers (patterns without types)
    handler_parameter_list: ($) =>
      seq($.identifier, repeat(seq(",", $.identifier)), optional(",")),

    // Handler pattern is now only used inside handle_expression, not general patterns
    spread: ($) => "..",

    // Pattern field: name: pattern or just name (shorthand)
    argument_list: ($) => seq($._expression, repeat(seq(",", $._expression))),

    primary_expression: ($) =>
      choice(
        $.keyword_true,
        $.keyword_false,
        $.keyword_nil,
        $.number_literal,
        $.string,
        $.raw_string,
        $.raw_interpolated_string,
        $.multiline_string,
        $.bytes_string,
        $.raw_bytes,
        $.raw_interpolated_bytes,
        $.multiline_bytes,
        $.rune,
        $.value_path,
        $.list_expression,
        $.tuple_expression,
        $.operator_fn,
        $.block, // { expr } for grouping
      ),

    // All binary operators
    _operator: ($) =>
      choice(
        "+",
        "-",
        "*",
        "/",
        "%", // Arithmetic
        "<>",
        "==",
        "!=",
        "<=",
        ">=",
        "<",
        ">", // Comparison & concat
        "&&",
        "||", // Logical
      ),

    // Operator as function: (+), (<>), (==), (Int::+), (String::<>), etc.
    operator_fn: ($) =>
      seq(
        "(",
        field(
          "operator",
          choice(
            alias(
              token(
                choice(
                  "+",
                  "-",
                  "*",
                  "/",
                  "%",
                  "<>",
                  "==",
                  "!=",
                  "<=",
                  ">=",
                  "<",
                  ">",
                  "&&",
                  "||",
                ),
              ),
              $.operator,
            ),
            $.qualified_operator,
          ),
        ),
        ")",
      ),

    // Qualified operator: Int::+, List::<>, String::==
    // NOTE: This is a token to prevent partial matching (e.g., Foo:: without operator)
    // which would cause Foo::bar() to be parsed as binary_expression instead of call_expression
    qualified_operator: ($) =>
      token(
        seq(
          /[A-Z][a-zA-Z0-9_]*/,  // type_identifier pattern
          "::",
          choice("+", "-", "*", "/", "%", "<>", "==", "!=", "<=", ">=", "<", ">", "&&", "||"),
        ),
      ),

    // Record expression: User { name: "Alice", age: 30 }
    // Record with shorthand: User { name, age }
    // Record with spread: User { ..user, age: 31 }
    record_expression: ($) =>
      prec(
        11,
        seq(
          field("type", $.type_path),
          "{",
          optional(field("fields", $.record_fields)),
          "}",
        ),
      ),

    record_fields: ($) =>
      seq(
        $.record_field,
        repeat(seq($._field_separator, $.record_field)),
        optional($._field_separator),
      ),

    record_field: ($) =>
      choice(
        // Spread: ..expr
        seq($.spread, field("value", $._expression)),
        // Full form: name: value
        seq(field("name", $.identifier), ":", field("value", $._expression)),
        // Shorthand: name (binds to identifier with same name)
        field("name", $.identifier),
      ),

    // fn(x) x + 1
    // fn(x: Int) -> Int x + 1
    // fn(x, y) x + y
    // fn(x) { let y = x + 1; y * 2 }
    // Lowest precedence (0) so lambda body captures entire expression
    value_path: ($) =>
      choice(
        $.identifier,
        prec.right(
          11,
          seq(
            choice(alias($._name, $.path_segment), $.path_keyword),
            repeat(seq("::", alias($._name, $.path_segment))),
            "::",
            $.identifier,
          ),
        ),
      ),

    // A path whose final segment is a type or constructor name.
    // Used where the syntactic role distinguishes constructors/types from
    // ordinary function paths: std::io::Error::EndOfFile, pkg::model::User.
    type_path: ($) =>
      choice(
        $.type_identifier,
        prec.right(
          11,
          seq(
            choice(alias($._name, $.path_segment), $.path_keyword),
            repeat(seq("::", alias($._name, $.path_segment))),
            "::",
            $.type_identifier,
          ),
        ),
      ),

    // [1, 2, 3]
    number_literal: ($) =>
      seq(
        token(
          choice(
            seq(optional(/[+-]/), choice(...NUMBER_MAGNITUDES)),
            re`[+-]?[0-9][0-9_]*\.[0-9][0-9_]*([eE][+-]?[0-9_]*)?`,
          ),
        ),
        optional($.number_suffix),
      ),

    // Rune literal: ?a, ?\n, ?\t, ?\x41, ?\u{41}
    // Matches: ? followed by either:
    //   - A single printable character (not backslash or whitespace)
    //   - An escape sequence: \n, \r, \t, \0, \\, \xHH, \u{H...} (1-6 hex digits)
    rune: ($) =>
      token(
        choice(
          // Simple rune: ?a, ?Z, ?!, ?@, etc. (any printable non-backslash, non-whitespace)
          re`\?[^\\\s]`,
          // Escape sequences
          re`\?\\[nrt0\\]`, // ?\n, ?\r, ?\t, ?\0, ?\\
          re`\?\\x[0-9a-fA-F]{2}`, // ?\x41
          re`\?\\u\{[0-9a-fA-F]{1,6}\}`, // ?\u{41}
        ),
      ),

    string: ($) =>
      seq(
        choice('"', 's"'),
        $.string_segment,
        optional(repeat1(seq($.interpolation, $.string_segment))),
        '"',
      ),

    string_segment: ($) =>
      prec(-1, re`([^"\\]|\\[nrt0"\\]|\\x[0-7][0-9a-fA-F]|\\u\{[0-9a-fA-F]{1,6}\})*`),

    bytes_string: ($) =>
      seq(
        'b"',
        $.bytes_segment,
        optional(repeat1(seq($.bytes_interpolation, $.bytes_segment))),
        '"',
      ),

    bytes_segment: ($) => prec(-1, re`([^"\\]|\\[nrt0"\\]|\\x[0-9a-fA-F]{2})*`),

    identifier: ($) => re`[a-z_][a-zA-Z0-9_]*|r#[a-z_][a-zA-Z0-9_]*`,

    // Name can be either identifier or type_identifier (used in paths, modules)
    _name: ($) => choice($.identifier, $.type_identifier),

    // Keywords
    keyword_fn: ($) => token(prec(2, "fn")),
    keyword_op: ($) => token(prec(2, "op")),
    keyword_do: ($) => token(prec(2, "do")),
    keyword_resume: ($) => token(prec(2, "resume")),
    keyword_pub: ($) => "pub",
    keyword_extern: ($) => "extern",

    // Visibility marker: pub, pub(pkg), pub(super)
    // Currently only supports 'pub', extensible for restricted visibility later
    visibility_marker: ($) =>
      seq(
        $.keyword_pub,
        optional(seq("(", $._outer_path_keyword, ")")),
      ),
    keyword_mod: ($) => "mod",
    keyword_handle: ($) => "handle",
    keyword_nil: ($) => token(prec(1, "Nil")),

    // Comments
    // Line doc comment: /// ... (higher precedence to match before line_comment)
    line_doc_comment: ($) => token(prec(2, seq("///", re`.*`))),

    // Line comment: // ... (lower precedence, won't match /// due to doc comment)
    line_comment: ($) => token(prec(1, seq("//", re`.*`))),

    // block_comment and block_doc_comment are handled by external scanner
    // for proper nesting support: /* ... /* nested */ ... */
  },
