test/corpus/escape_sequences.txt
================================================================================
String escape sequences - basic
================================================================================

fn main() {
    "hello\nworld"
    "tab\there"
    "cr\rhere"
    "null\0here"
    "quote\"here"
    "backslash\\here"
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      body: (block
        (expression_statement
          (primary_expression
            (string
              (string_segment))))
        (expression_statement
          (primary_expression
            (string
              (string_segment))))
        (expression_statement
          (primary_expression
            (string
              (string_segment))))
        (expression_statement
          (primary_expression
            (string
              (string_segment))))
        (expression_statement
          (primary_expression
            (string
              (string_segment))))
        (expression_statement
          (primary_expression
            (string
              (string_segment))))))))

================================================================================
String escape sequences - hex (ASCII range)
================================================================================

fn main() {
    "\x41\x42\x43"
    "\x00\x7F"
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      body: (block
        (expression_statement
          (primary_expression
            (string
              (string_segment))))
        (expression_statement
          (primary_expression
            (string
              (string_segment))))))))

================================================================================
String escape sequences - unicode
================================================================================

fn main() {
    "\u{41}"
    "\u{E9}"
    "\u{4E16}"
    "\u{1F600}"
    "\u{0}\u{10FFFF}"
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      body: (block
        (expression_statement
          (primary_expression
            (string
              (string_segment))))
        (expression_statement
          (primary_expression
            (string
              (string_segment))))
        (expression_statement
          (primary_expression
            (string
              (string_segment))))
        (expression_statement
          (primary_expression
            (string
              (string_segment))))
        (expression_statement
          (primary_expression
            (string
              (string_segment))))))))

================================================================================
String escape sequences - fixed-width unicode is rejected
:error
================================================================================

fn main() {
    "\u0041"
}

--------------------------------------------------------------------------------

================================================================================
Rune escape sequences - fixed-width unicode is rejected
:error
================================================================================

fn main() {
    ?\u0041
}

--------------------------------------------------------------------------------

================================================================================
Rune escape sequences
================================================================================

fn main() {
    ?a
    ?\n
    ?\x41
    ?\u{41}
    ?\u{1F600}
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      body: (block
        (expression_statement
          (primary_expression
            (rune)))
        (expression_statement
          (primary_expression
            (rune)))
        (expression_statement
          (primary_expression
            (rune)))
        (expression_statement
          (primary_expression
            (rune)))
        (expression_statement
          (primary_expression
            (rune)))))))

================================================================================
Bytes escape sequences - unicode is rejected
:error
================================================================================

fn main() {
    b"\u{41}"
}

--------------------------------------------------------------------------------

================================================================================
Bytes escape sequences - basic
================================================================================

fn main() {
    b"hello\nworld"
    b"tab\there"
    b"\0\0"
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      body: (block
        (expression_statement
          (primary_expression
            (bytes_string
              (bytes_segment))))
        (expression_statement
          (primary_expression
            (bytes_string
              (bytes_segment))))
        (expression_statement
          (primary_expression
            (bytes_string
              (bytes_segment))))))))

================================================================================
Bytes escape sequences - hex (full range)
================================================================================

fn main() {
    b"\x00\xFF"
    b"\x80\xFE"
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      body: (block
        (expression_statement
          (primary_expression
            (bytes_string
              (bytes_segment))))
        (expression_statement
          (primary_expression
            (bytes_string
              (bytes_segment))))))))

================================================================================
String with mixed escapes and text
================================================================================

fn main() {
    "line1\nline2\ttab\x41end"
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (regular_function
      (keyword_fn)
      name: (identifier)
      body: (block
        (expression_statement
          (primary_expression
            (string
              (string_segment))))))))
